--- a/maumau/.project
+++ b/maumau/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hw3</name>
+	<name>maumau</name>
 	<comment></comment>
 	<projects>
 	</projects>
