--- a/filesystem/.classpath
+++ b/filesystem/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/Programmid/eclipse-java-helios-win32/eclipse/plugins/de.uni_kassel.features_0.24.0.201005281321.jar"/>
-	<classpathentry kind="lib" path="D:/Programmid/eclipse-java-helios-win32/eclipse/plugins/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
+	<classpathentry kind="lib" path="libs/de.uni_kassel.features_0.24.0.201005281321.jar"/>
+	<classpathentry kind="lib" path="libs/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
