--- a/maumau/.classpath
+++ b/maumau/.classpath
@@ -3,8 +3,10 @@
 	<classpathentry kind="src" path="generated"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/de.uni_kassel.features_0.24.0.201005281321.jar"/>
-	<classpathentry kind="lib" path="libs/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
-	<classpathentry kind="lib" path="libs/junit-4.8.2.jar"/>
+	<classpathentry kind="lib" path="D:/Kristjan/Java_workspace/mancala/homework4/maumau/libs/de.uni_kassel.features_0.24.0.201005281321.jar"/>
+	<classpathentry kind="lib" path="D:/Kristjan/Java_workspace/mancala/homework4/maumau/libs/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
+	<classpathentry kind="lib" path="D:/Programmid/eclipse-java-helios-win32/eclipse/plugins/de.uni_kassel.features_0.24.0.201005281321.jar"/>
+	<classpathentry kind="lib" path="/FileSystem/libs/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
+	<classpathentry kind="lib" path="D:/Programmid/eclipse-java-helios-win32/eclipse/plugins/de.uni_paderborn.runtimetools_1.0.4.201005281321.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
